--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -419,7 +419,7 @@
                         <th class="col-taxable" style="background-color: rgba(31,111,235,0.06); color:#1F6FEB; font-weight:700; padding:18px 12px;">
                             <div style="display:flex;flex-direction:column;align-items:flex-end;text-align:right;gap:2px;line-height:1;">
                                 <span style="font-size:1.05rem;font-weight:800;">Taxable</span>
-                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">BOY</span>
+                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">Year Begin</span>
                             </div>
                         </th>
                         <th class="col-taxable" style="background-color: rgba(31,111,235,0.06); color:#1F6FEB; font-weight:700; padding:18px 12px;">
@@ -437,14 +437,14 @@
                         <th class="col-taxable" style="background-color: rgba(31,111,235,0.06); color:#1F6FEB; font-weight:700; padding:18px 12px;">
                             <div style="display:flex;flex-direction:column;align-items:flex-end;text-align:right;gap:2px;line-height:1;">
                                 <span style="font-size:1.05rem;font-weight:800;">Taxable</span>
-                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">EOY</span>
+                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">Year End</span>
                             </div>
                         </th>
 
                         <th class="col-traditional" style="background-color: rgba(56,178,172,0.06); color:#38B2AC; font-weight:700; padding:18px 12px;">
                             <div style="display:flex;flex-direction:column;align-items:flex-end;text-align:right;gap:2px;line-height:1;">
                                 <span style="font-size:1.05rem;font-weight:800;">Traditional</span>
-                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">BOY</span>
+                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">Year Begin</span>
                             </div>
                         </th>
                         <th class="col-traditional" style="background-color: rgba(56,178,172,0.06); color:#38B2AC; font-weight:700; padding:18px 12px;">
@@ -456,14 +456,14 @@
                         <th class="col-traditional" style="background-color: rgba(56,178,172,0.06); color:#38B2AC; font-weight:700; padding:18px 12px;">
                             <div style="display:flex;flex-direction:column;align-items:flex-end;text-align:right;gap:2px;line-height:1;">
                                 <span style="font-size:1.05rem;font-weight:800;">Traditional</span>
-                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">EOY</span>
+                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">Year End</span>
                             </div>
                         </th>
 
                         <th class="col-roth" style="background-color: rgba(109,93,252,0.06); color:#6D5DFC; font-weight:700; padding:18px 12px;">
                             <div style="display:flex;flex-direction:column;align-items:flex-end;text-align:right;gap:2px;line-height:1;">
                                 <span style="font-size:1.05rem;font-weight:800;">Roth</span>
-                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">BOY</span>
+                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">Year Begin</span>
                             </div>
                         </th>
                         <th class="col-roth" style="background-color: rgba(109,93,252,0.06); color:#6D5DFC; font-weight:700; padding:18px 12px;">
@@ -475,7 +475,7 @@
                         <th class="col-roth" style="background-color: rgba(109,93,252,0.06); color:#6D5DFC; font-weight:700; padding:18px 12px;">
                             <div style="display:flex;flex-direction:column;align-items:flex-end;text-align:right;gap:2px;line-height:1;">
                                 <span style="font-size:1.05rem;font-weight:800;">Roth</span>
-                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">EOY</span>
+                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">Year Begin</span>
                             </div>
                         </th>
 
@@ -494,7 +494,7 @@
                         <th class="text-end col-totals" style="background-color: rgba(255,214,0,0.06); color:#FFD600; font-weight:700; padding:18px 12px;">
                             <div style="display:flex;flex-direction:column;align-items:flex-end;text-align:right;gap:2px;line-height:1;">
                                 <span style="font-size:1.05rem;font-weight:800;">Total</span>
-                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">EOY</span>
+                                <span style="font-size:0.78rem;font-weight:600;opacity:.9;">Year End</span>
                             </div>
                         </th>
                     </tr>
